# MyLinAlg

./: Cargo.toml
src/: collumn.rs  cpuaccalerators.rs  gpuaccalerators.rs  inputparse.rs  lib.rs  linearsolvers.rs  mathfunctions.rs  matrix.rs  plotting.rs  row.rs  supermatrix.rs  types.rs
src/fem/: main.rs
src/optimization/: decent_methods.rs  line_search_methods.rs  mod.rs  optimizer.rs  optimizer_setup.rs  simulation_constants.rs
src/optimization/cost_controller/: cost_controller.rs  cost_functions.rs  mod.rs
src/optimization/descent_controller/: conjugate_descent.rs  decent_controller.rs  mod.rs  nonlinear_programming.rs  quadratic_programming.rs  quasi_newton.rs  steepest_descent.rs
src/optimization/line_searcher/: golden_section_extrapolation.rs  golden_section_interpolation.rs  line_searcher.rs  mod.rs  quadratic_interpolation.rs
src/plotting/: colormaps.rs  default_settings.rs  interactive.rs  mod.rs  plot_builder.rs  style_enums.rs
src/plotting/plot_processor/: mod.rs  plotters_backend.rs
src/plotting/plotting_types/: line2d.rs  line3d.rs  mod.rs  polygons.rs  surface3d.rs
