[package]
name = "mla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
cudarc = "0.9.14"
rand = "0.8.5"
round-based = "0.1.7"
lazy_static = "1.4.0"
packed_simd = "0.3.9"
plotters = "0.3.5"
tiny-skia = "0.11.2"
resvg = "0.36.0"
usvg = "0.36.0"
egui = "0.24.1"
eframe = "0.24.1"
egui_extras = "0.24.1"
image = "0.24.7"